--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-#Recopilación de distintos recursos para estudiar Ciberseguridad.
+##Recopilacion de distintos recursos para estudiar Ciberseguridad.
 Hecho por : Mr_0n1, o mas bien conocido en Tiktok como "Blue Cyber Oni", y conocido en Medium como "Mr_Architekt" (cuantas identidades...)
